# Autonomous-navigation

./: README.md  paper_try1.py  paper_try_with_p.py  visualise.py  working_hough_with_cluttering.py  zed_get_coord.py
cluster/: CMakeLists.txt  cloud_filtered.pcd  cluster_extraction.cpp  cluster_ours.cpp  cluster_ransac.cpp  p0.pcd  p1.pcd  p10.pcd  p11.pcd  p12.pcd  p13.pcd  p2.pcd  p3.pcd  p4.pcd  p5.pcd  p6.pcd  p7.pcd  p8.pcd  p9.pcd
